supabase_flutterパッケージを追加するところまで
- flutter_dotenvで管理している.envからSupabaseにURLとANONKEYを取得して初期化

- pubspec.yamlとmain.dart以外のgenerated_●●のファイルは自動で差分が生えてきた
  - 中身的にはGit管理して問題なさげなコードに見える（更新だし）のでコミットに含める

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
 
   # Flutterで.envを扱うためのパッケージ
   flutter_dotenv: ^5.1.0
+  # FlutterでSupabaseを扱うためのパッケージ(CLIライブラリ)
+  supabase_flutter: ^1.10.25
 
 
   # The following adds the Cupertino Icons font to your application.
