--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "dart.flutterSdkPath": ".fvm/flutter_sdk",
-    "[markdown]": {
-        "files.trimTrailingWhitespace": false
-    }
+  "dart.flutterSdkPath": ".fvm\\versions\\3.16.4"
 }
