namespace修正、旧開発環境でfvm3で動作することを確認
- 旧開発環境でfvm3（スタンドアローン版）、Flutter3.16.4、Dart3.2.3、JRE8（1.8.0_301、JDKでない？）の状態で正常に起動できることを確認
- java -versionのコマンドは以下を返す状態

```
>which java
C:\Program Files (x86)\Common Files\Oracle\Java\javapath\java.EXE

>java -version
java version "1.8.0_301"
Java(TM) SE Runtime Environment (build 1.8.0_301-b09)
Java HotSpot(TM) 64-Bit Server VM (build 25.301-b09, mixed mode)
```

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -7,7 +7,7 @@ project(runner LANGUAGES CXX)
 set(BINARY_NAME "flutter3_and_supabase_study")
 # The unique GTK application identifier for this application. See:
 # https://wiki.gnome.org/HowDoI/ChooseApplicationID
-set(APPLICATION_ID "com.flutter3_and_supabase_study.flutter3_and_supabase_study")
+set(APPLICATION_ID "com.imo_tikuwa.flutter3_and_supabase_study")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
