--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
   # Flutterで.envを扱うためのパッケージ
   flutter_dotenv: ^5.1.0
   # FlutterでSupabaseを扱うためのパッケージ(CLIライブラリ)
-  supabase_flutter: ^1.10.25
+  supabase_flutter: ^2.0.2
+  # Font Awesome を扱うためのパッケージ
+  font_awesome_flutter: ^10.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
