トースト表示のためのパッケージ追加
- android.defaultConfig.minSdkVersionのバージョンについて21にする必要があった。具体的には以下のエラーが出てビルドできなかった

```
┌─ Flutter Fix ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ The plugin fluttertoast requires a higher Android SDK version.                                                                │
│ Fix this issue by adding the following to the file C:\workspace_flutter\flutter3-and-supabase-study\android\app\build.gradle: │
│ android {                                                                                                                     │
│   defaultConfig {                                                                                                             │
│     minSdkVersion 21                                                                                                          │
│   }                                                                                                                           │
│ }                                                                                                                             │
│                                                                                                                               │
│                                                                                                                               │
│ Following this change, your app will not be available to users running Android SDKs below 21.                                 │
│ Consider searching for a version of this plugin that supports these lower versions of the Android SDK instead.                │
│ For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration               │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
```

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,9 @@ android {
         applicationId "com.imo_tikuwa.flutter3_and_supabase_study"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        // minSdkVersion flutter.minSdkVersion
+        // fluttertoastパッケージ追加後、ビルド時に「The plugin fluttertoast requires a higher Android SDK version.」 というエラーが出たので指示に従い修正
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
