--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   supabase_flutter: ^2.0.2
   # Font Awesome を扱うためのパッケージ
   font_awesome_flutter: ^10.6.0
-
+  # トーストメッセージを扱うためのパッケージ
+  fluttertoast: ^8.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
